<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <!--  BluetoothChat -->
    <string name="not_connected">You are not connected to a device</string>
    <string name="bt_not_enabled_leaving">Bluetooth was not enabled. Leaving OpeniConsole.</string>
    <string name="title_connecting">connecting...</string>
    <string name="title_connected_to">connected to <xliff:g id="device_name">%1$s</xliff:g></string>
    <string name="title_not_connected">not connected</string>

    <string name="scanning">scanning for devices...</string>
    <string name="select_device">select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="disconnect">Disconnect</string>
    <string name="time_n00_00_00">00:00</string>
    <string name="speed_n0_0_km_h">0.0</string>
    <string name="rpm_n0">0</string>
    <string name="level_n1">Level\n1</string>
    <string name="distance_n0_0_km">0.0</string>
    <string name="calories_n0_cal">000</string>
    <string name="heart_n0">000</string>
    <string name="power_n0_0_w">0.0</string>
    <string name="level">Level</string>
    <string name="local_service_started">OpeniConsole Bluetooth active</string>
    <string name="local_service_label">OpeniConsole</string>
    <string name="secure_connect">Connect to iConsole</string>


    <string name="app_name">iConsoleOS</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">iConsoleOS</string>
    <string name="nav_header_subtitle">Control your fitness</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_exerciseProfile">Exercise Profiles</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="ExProfDuration">Duration:</string>
    <string name="ExProfLevel">Level:</string>
    <string name="ExProfDelete">Delete</string>
    <string name="ExProfID">ID</string>
    <string name="ExProfOrder">Order</string>
    <string name="ExProfParentID">parentID</string>
    <string name="HomeRPM">RPM</string>
    <string name="HomeCalories">Calories</string>
    <string name="HomeHeart">Heart</string>
    <string name="HomeDistance">Distance</string>
    <string name="HomeSpeed">Speed</string>
    <string name="HomePower">Power</string>
    <string name="HomeTime">Time</string>
    <string name="users">Users</string>
    <string name="export_db">export DB</string>
    <string name="import_db">import DB</string>

    <string-array name="profileDataTypes">
        <item>Warm-up</item>
        <item>Exercise</item>
        <item>Cool-down</item>
    </string-array>

</resources>
