<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_home"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="0dp">

    <!--
        TODO: create layout that works for phone
        TODO: adapt heart to not adjust width to text
    -->

    <eu.le_tian.iConsoleOS.graph.GraphView
        android:id="@+id/homeGraphView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline6"
        app:layout_constraintEnd_toStartOf="@+id/guidelineright"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <eu.le_tian.iConsoleOS.heartbeat.HeartBeat
        android:id="@+id/heartBeat2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="-15dp"
        android:layout_marginEnd="-16dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toEndOf="@+id/Heart"
        app:layout_constraintStart_toStartOf="@+id/Heart"
        app:layout_constraintTop_toTopOf="@+id/textView6"
        app:srcCompat="@drawable/ic_heart" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/HomeRPM"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toTopOf="@+id/RPM"
        app:layout_constraintEnd_toEndOf="@+id/RPM"
        app:layout_constraintLeft_toLeftOf="@+id/guidelineleft"
        app:layout_constraintRight_toLeftOf="@+id/guidelineright"
        app:layout_constraintStart_toStartOf="@+id/RPM" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/HomeCalories"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toTopOf="@+id/Calories"
        app:layout_constraintEnd_toEndOf="@+id/Calories"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/guidelineleft"
        app:layout_constraintStart_toStartOf="@+id/Calories" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/HomeHeart"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toTopOf="@+id/Heart"
        app:layout_constraintEnd_toEndOf="@+id/Heart"
        app:layout_constraintLeft_toLeftOf="@+id/guidelineleft"
        app:layout_constraintRight_toLeftOf="@+id/guidelineright"
        app:layout_constraintStart_toStartOf="@+id/Heart" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/HomeDistance"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toTopOf="@+id/Distance"
        app:layout_constraintEnd_toEndOf="@+id/Distance"
        app:layout_constraintStart_toStartOf="@+id/Distance" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/HomeSpeed"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toTopOf="@+id/Speed"
        app:layout_constraintEnd_toEndOf="@+id/Speed"
        app:layout_constraintRight_toLeftOf="@+id/guidelineleft"
        app:layout_constraintStart_toStartOf="@+id/Speed" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/HomePower"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toTopOf="@+id/Power"
        app:layout_constraintEnd_toEndOf="@+id/Power"
        app:layout_constraintStart_toStartOf="@+id/Power" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/HomeTime"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintBottom_toTopOf="@+id/guideline5"
        app:layout_constraintEnd_toStartOf="@+id/Time"
        app:layout_constraintStart_toStartOf="@+id/guidelineleft"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="monospace"
        android:gravity="center"
        android:text="@string/time_n00_00_00"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guideline5"
        app:layout_constraintEnd_toStartOf="@+id/guidelineright"
        app:layout_constraintStart_toStartOf="@+id/guidelineleft"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Speed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="monospace"
        android:gravity="center"
        android:text="@string/speed_n0_0_km_h"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display3"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guidelineleft"
        app:layout_constraintTop_toTopOf="@+id/guideline6"
        app:layout_constraintVertical_bias="0.514" />

    <TextView
        android:id="@+id/Power"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="monospace"
        android:gravity="center"
        android:text="@string/power_n0_0_w"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display3"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toStartOf="@+id/RPM"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline6" />

    <TextView
        android:id="@+id/RPM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="monospace"
        android:gravity="center"
        android:text="@string/rpm_n0"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display3"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toStartOf="@+id/guidelineleft"
        app:layout_constraintStart_toEndOf="@+id/Power"
        app:layout_constraintTop_toTopOf="@+id/guideline6" />

    <TextView
        android:id="@+id/Distance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:fontFamily="monospace"
        android:gravity="center"
        android:text="@string/distance_n0_0_km"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display3"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/Calories"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2" />

    <TextView
        android:id="@+id/Calories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="monospace"
        android:gravity="center"
        android:text="@string/calories_n0_cal"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display3"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guidelineleft"
        app:layout_constraintStart_toEndOf="@+id/Distance"
        app:layout_constraintTop_toTopOf="@+id/guideline2" />

    <TextView
        android:id="@+id/Heart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="monospace"
        android:gravity="center"
        android:text="@string/heart_n0"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display3"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toStartOf="@+id/guidelineright"
        app:layout_constraintTop_toTopOf="@+id/guideline6" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/level"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guidelineright"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_bluetooth"
        android:layout_width="@dimen/square_icon_size"
        android:layout_height="@dimen/square_icon_size"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/bt_icon"
        android:backgroundTint="@color/colorlistredbutton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2" />

    <Button
        android:id="@+id/button_start"
        android:layout_width="@dimen/square_icon_size"
        android:layout_height="@dimen/square_icon_size"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/ic_button_start"
        android:backgroundTint="@color/colorlistdarkbutton"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_stop"
        app:layout_constraintTop_toTopOf="@+id/guideline2" />

    <Button
        android:id="@+id/button_stop"
        android:layout_width="@dimen/square_icon_size"
        android:layout_height="@dimen/square_icon_size"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/ic_button_stop"
        android:backgroundTint="@color/colorlistdarkbutton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_bluetooth"
        app:layout_constraintTop_toTopOf="@+id/guideline2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineleft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.35" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.6" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineright"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.75" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.8" />

    <Spinner
        android:id="@+id/homeProfileSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:spinnerMode="dropdown"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_start"
        app:layout_constraintTop_toTopOf="@+id/guideline2" />

    <abak.tr.com.boxedverticalseekbar.BoxedVertical
        android:id="@+id/levelSeekbar"
        android:layout_width="60dp"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_marginEnd="16dp"
        android:layout_weight="1"
        app:backgroundColor="@color/color_background"
        app:defaultValue="1"
        app:imageEnabled="false"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline5"
        app:max="32"
        app:progressColor="@color/design_default_color_secondary"
        app:step="5"
        app:textBottomPadding="20"
        app:textColor="@color/colorRed"
        app:textEnabled="true"
        app:textSize="12sp"
        app:touchDisabled="true" />

    <TextView
        android:id="@+id/levelTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="1"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toStartOf="@+id/levelSeekbar"
        app:layout_constraintStart_toStartOf="@+id/guidelineright"
        app:layout_constraintTop_toTopOf="@+id/guideline5"
        tools:ignore="HardcodedText" />

    <Button
        android:id="@+id/plusButton"
        style="@android:style/Widget.Holo.Button"
        android:layout_width="@dimen/square_icon_size"
        android:layout_height="@dimen/square_icon_size"
        android:text="+"
        app:layout_constraintBottom_toTopOf="@+id/levelTextView"
        app:layout_constraintEnd_toStartOf="@+id/levelSeekbar"
        app:layout_constraintStart_toStartOf="@+id/guidelineright"
        app:layout_constraintTop_toBottomOf="@+id/plusPlusButton"
        tools:ignore="HardcodedText" />

    <Button
        android:id="@+id/plusPlusButton"
        style="@android:style/Widget.Holo.Button"
        android:layout_width="@dimen/square_icon_size"
        android:layout_height="@dimen/square_icon_size"
        android:text="++"
        app:layout_constraintEnd_toStartOf="@+id/levelSeekbar"
        app:layout_constraintStart_toStartOf="@+id/guidelineright"
        app:layout_constraintTop_toTopOf="@+id/guideline5"
        tools:ignore="HardcodedText" />

    <Button
        android:id="@+id/minButton"
        style="@android:style/Widget.Holo.Button"
        android:layout_width="@dimen/square_icon_size"
        android:layout_height="@dimen/square_icon_size"
        android:text="-"
        app:layout_constraintBottom_toTopOf="@+id/minMinButton"
        app:layout_constraintEnd_toStartOf="@+id/levelSeekbar"
        app:layout_constraintStart_toStartOf="@+id/guidelineright"
        app:layout_constraintTop_toBottomOf="@+id/levelTextView"
        tools:ignore="HardcodedText" />

    <Button
        android:id="@+id/minMinButton"
        style="@android:style/Widget.Holo.Button"
        android:layout_width="@dimen/square_icon_size"
        android:layout_height="@dimen/square_icon_size"
        android:text="- -"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toStartOf="@+id/levelSeekbar"
        app:layout_constraintStart_toStartOf="@+id/guidelineright"
        tools:ignore="HardcodedText" />

</androidx.constraintlayout.widget.ConstraintLayout>
